--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "production": [
       ">0.2%",
       "not dead",
+      "not ie <=10",
       "not op_mini all"
     ],
     "development": [
