--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "biography",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/LiliyaGavrishchishena/biography",
   "dependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "gh-pages": "^2.0.1",
     "google-map-react": "^1.1.4",
     "gsap": "^2.1.2",
     "react": "^16.8.6",
@@ -17,6 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
